# solanum

./: .appveyor-build.sh  .appveyor.yml  .gitignore  .mailmap  .travis.yml  CREDITS  Makefile.am  NEWS.md  README.md  configure.ac  meson.build  meson_options.txt  shtool
.github/workflows/: ci.yml  docs.yaml  msbuild.yml
authd/: Makefile.am  authd.c  authd.h  dns.c  dns.h  meson.build  notice.h  provider.c  provider.h  res.c  res.h  reslib.c  reslib.h
authd/providers/: dnsbl.c  ident.c  opm.c
bandb/: Makefile.am  bandb.c  bantool.c  meson.build  rsdb.h  rsdb_snprintf.c  rsdb_sqlite3.c
doc/: Makefile.am  connecting-servers.rst  credits-past.txt  ircd.conf.example  ircd.motd.example  meson.build  readme.txt  reference.conf  server-version-info.txt
doc/features/: account-notify.txt  batch.txt  challenge.txt  extban.txt  filter.txt  modeg.txt
doc/oper-guide/: config.rst  oprivs.rst  umodes.rst
doc/technical/: capab.txt  hooks.md  hooks.txt  ts6-protocol.txt  ts6.md
extensions/: Makefile.am  README  botmode.c  cap_gateway.c  cap_oper.c  cap_realhost.c  chm_adminonly.c  chm_insecure.c  chm_nobots.c  chm_nonotice.c  chm_operonly.c  chm_operonly_compat.c  chm_operpeace.c  chm_quietunreg_compat.c  chm_regmsg.c  chm_serviceonly.c  chm_sslonly.c  chm_sslonly_compat.c  createauthonly.c  createoperonly.c  drain.c  example_module.c  extb_account.c  extb_canjoin.c  extb_extgecos.c  extb_gateway.c  extb_guest.c  extb_hostmask.c  extb_opername.c  extb_operpriv.c  extb_ssl.c  filter.c  force_user_invis.c  helpops.c  hide_idle_time.c  hide_uncommon_channels.c  hurt.c  identify_msg.c  invex_regonly.c  invite_notify.c  (+41 more)
help/: .gitignore  Makefile.am  make_index.SH  meson.build
help/opers/: batch  challenge  cmode  dehelper  dline  extban  index  join  kill  kline  list  modlist  notice  privmsg  quarantine  searchkline  setfilter  shedding  snomask  stats  testkline  umode  undline  unkline  unquarantine  unxline  wallops  xline
help/users/: cmode  modlist  stats  tagmsg  umode
include/: authproc.h  batch.h  cache.h  capability.h  certfp.h  channel.h  chmode.h  client.h  client_tags.h  datecode.h.in  defaults.h  dns.h  hash.h  hook.h  hostmask.h  ircd.h  ircd_defs.h  ircd_getopt.h  ircd_linker.h  listener.h  m_info.h  match.h  meson.build  messages.h  modules.h  monitor.h  msgbuf.h  newconf.h  numeric.h  operhash.h  parse.h  privilege.h  ratelimit.h  reject.h  response.h  restart.h  s_assert.h  s_conf.h  s_newconf.h  s_serv.h  (+12 more)
include/inline/: stringops.h
ircd/: Makefile.am  authproc.c  bandbi.c  batch.c  cache.c  capability.c  channel.c  chmode.c  client.c  client_tags.c  creation.c.SH  creation.c.in  dns.c  extban.c  getopt.c  hash.c  hook.c  hostmask.c  ircd.c  ircd_lexer.l  ircd_parser.y  ircd_signal.c  listener.c  logger.c  main.c  match.c  meson.build  modules.c  monitor.c  msgbuf.c  newconf.c  operhash.c  packet.c  parse.c  privilege.c  ratelimit.c  reject.c  response.c  restart.c  s_conf.c  (+14 more)
librb/: CREDITS  Makefile.am  acinclude.m4  configure.ac  librb-config.h.in  librb.pc.in  meson.build
librb/include/: commio-int.h  meson.build  rb_balloc.h  rb_commio.h  rb_dictionary.h  rb_event.h  rb_lib.h  rb_linebuf.h  rb_patricia.h  rb_radixtree.h  rb_tools.h
librb/src/: Makefile.am  arc4random.c  balloc.c  commio.c  crypt.c  dictionary.c  epoll.c  event.c  export-syms.txt  gnutls_ratbox.h  helper.c  linebuf.c  mbedtls.c  mbedtls_ratbox.h  openssl.c  openssl_ratbox.h  patricia.c  poll.c  ports.c  radixtree.c  rawbuf.c  rb_lib.c  sigio.c  tools.c  unix.c  version.c.SH  version.c.in  win32.c
m4/: charybdis.m4
modules/: Makefile.am  cap_account_tag.c  cap_labeled_response.c  cap_message_tags.c  cap_server_time.c  chm_nocolour.c  chm_noctcp.c  chm_regmsg.c  m_accept.c  m_admin.c  m_alias.c  m_away.c  m_batch.c  m_cap.c  m_capab.c  m_challenge.c  m_chghost.c  m_close.c  m_dline.c  m_etrace.c  m_grant.c  m_help.c  m_info.c  m_invite.c  m_kline.c  m_links.c  m_list.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_pong.c  m_privs.c  m_rehash.c  m_restart.c  m_resv.c  (+25 more)
modules/core/: cap_labeled_response.c  m_ban.c  m_batch.c  m_die.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_modules.c  m_nick.c  m_part.c  m_server.c  m_squit.c
scripts/: application.sh  makerelease.sh
ssld/: Makefile.am  meson.build  ssld.c
tests/: .gitignore  Makefile.am  TESTS  chmode1.c  client_util.c  client_util.h  hostmask1.c  ircd_util.c  labeled_response1.c  labeled_response1.conf  make_test_runtime.sh  match1.c  meson.build  misc.c  msgbuf_parse1.c  msgbuf_unparse1.c  privilege1.c  rb_dictionary1.c  rb_snprintf_append1.c  rb_snprintf_try_append1.c  sasl_abort1.c  send1.c  send_multiline1.c  serv_connect1.c  substitution1.c  test_invariant_reslib.py
tests/tap/: basic.c  basic.h
testsuite/: ircd.conf.1  ircd.conf.2  ircd.conf.3  startall.sh
tools/: Makefile.am  README.mkpasswd  meson.build  mkfingerprint.c  mkpasswd.c
wsockd/: sha1.c  wsockd.c
