# Directories
option('fhs_paths', type: 'boolean', value: false,
  description: 'Use FHS-compliant directory structure')
option('confdir', type: 'string', value: '',
  description: 'Directory for configuration files')
option('logdir', type: 'string', value: '',
  description: 'Directory for log files')
option('helpdir', type: 'string', value: '',
  description: 'Directory for help files')
option('moduledir', type: 'string', value: '',
  description: 'Directory for modules')
option('rundir', type: 'string', value: '',
  description: 'Directory for PID file')

# TLS
option('openssl', type: 'feature', value: 'auto',
  description: 'Enable OpenSSL support')
option('mbedtls', type: 'feature', value: 'auto',
  description: 'Enable mbedTLS support')
option('gnutls', type: 'feature', value: 'auto',
  description: 'Enable GnuTLS support')

# Features
option('sctp', type: 'feature', value: 'auto',
  description: 'Enable SCTP support')
option('hyperscan', type: 'feature', value: 'auto',
  description: 'Enable hyperscan regex support')
option('oper_chghost', type: 'boolean', value: false,
  description: 'Enable CHGHOST command for operators')

# Debug
option('assert', type: 'combo', choices: ['none', 'soft', 'hard'],
  value: 'none', description: 'Assertion level')
option('profile', type: 'boolean', value: false,
  description: 'Enable profiling support')
option('warnings', type: 'boolean', value: false,
  description: 'Enable extra compiler warnings')

# IRC protocol
option('nicklen', type: 'integer', value: 31, min: 9, max: 50,
  description: 'Maximum nickname length')
option('topiclen', type: 'integer', value: 390, min: 1,
  description: 'Maximum topic length')

# Branding
option('custom_branding', type: 'string', value: '',
  description: 'Custom branding name')
option('custom_version', type: 'string', value: '',
  description: 'Custom version string')

# Misc
option('program_prefix', type: 'string', value: '',
  description: 'Prefix for installed programs')
