module_inc = include_directories('../include', '../librb/include')
module_link_args = []
module_c_args = []

if cc.has_link_argument('-export-symbols-regex')
  module_link_args += ['-Wl,-export-symbols-regex,_mheader']
endif

autoload_modules = [
  'cap_account_tag',
  'cap_server_time',
  'chm_nocolour',
  'chm_noctcp',
  'um_callerid',
  'um_regonlymsg',
  'm_accept',
  'm_admin',
  'm_alias',
  'm_away',
  'm_batch',
  'm_cap',
  'm_capab',
  'm_certfp',
  'm_challenge',
  'm_chghost',
  'm_close',
  'm_connect',
  'm_dline',
  'm_encap',
  'm_etrace',
  'm_grant',
  'm_help',
  'm_info',
  'm_invite',
  'm_ison',
  'm_kline',
  'm_knock',
  'm_links',
  'm_list',
  'm_lusers',
  'm_map',
  'm_monitor',
  'm_motd',
  'm_names',
  'm_oper',
  'm_operspy',
  'm_pass',
  'm_ping',
  'm_pong',
  'm_post',
  'm_privs',
  'm_rehash',
  'm_restart',
  'm_resv',
  'm_sasl',
  'm_scan',
  'm_services',
  'm_set',
  'm_signon',
  'm_snote',
  'm_starttls',
  'm_stats',
  'm_svinfo',
  'm_tb',
  'm_testline',
  'm_testmask',
  'm_tginfo',
  'm_time',
  'm_topic',
  'm_trace',
  'm_unreject',
  'm_user',
  'm_userhost',
  'm_users',
  'm_version',
  'm_wallops',
  'm_who',
  'm_whois',
  'm_whowas',
  'm_xline',
  'sno_routing',
]

foreach mod : autoload_modules
  shared_module(mod,
    mod + '.c',
    name_prefix: '',
    name_suffix: 'so',
    dependencies: [libircd_dep, librb_dep],
    include_directories: module_inc,
    link_args: module_link_args,
    c_args: module_c_args,
    install: true,
    install_dir: moduledir / 'autoload'
  )
endforeach

core_modules = [
  'm_ban',
  'm_die',
  'm_error',
  'm_join',
  'm_kick',
  'm_kill',
  'm_message',
  'm_mode',
  'm_modules',
  'm_nick',
  'm_part',
  'm_quit',
  'm_server',
  'm_squit',
  'm_identified',
]

foreach mod : core_modules
  shared_module(mod,
    'core' / mod + '.c',
    name_prefix: '',
    name_suffix: 'so',
    dependencies: [libircd_dep, librb_dep],
    include_directories: module_inc,
    link_args: module_link_args,
    c_args: module_c_args,
    install: true,
    install_dir: moduledir
  )
endforeach
